--- a/Views/Employee/index.cshtml
+++ b/Views/Employee/index.cshtml
@@ -1,34 +1,34 @@
 ﻿@model IEnumerable<EmployeeManagement.Models.Employee>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <h1>Employees</h1>
-    <table>
-        <thead>
+<h2>Employee List</h2>
+
+<p>
+    <a asp-action="Create">Create New Employee</a>
+</p>
+
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Prename</th>
+            <th>Lastname</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var employee in Model)
+        {
             <tr>
-                <th>ID</th>
-                <th>Prename</th>
-                <th>Lastname</th>
+                <td>@employee.ID</td>
+                <td>@employee.Prename</td>
+                <td>@employee.Lastname</td>
+                <td>
+                    <form asp-action="Delete" method="post">
+                        <input type="hidden" name="id" value="@employee.ID" />
+                        <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this employee?');" />
+                    </form>
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var employee in Model)
-            {
-                <tr>
-                    <td>@employee.ID</td>
-                    <td>@employee.Prename</td>
-                    <td>@employee.Lastname</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    <p>
-        <a href="/Employee/Create">Create New</a>
-    </p>
-</body>
-</html>
+        }
+    </tbody>
+</table>
